--- a/style1.css
+++ b/style1.css
@@ -1,3 +1,12 @@
+:root {
+  --1a: #dfedf2;                    --1g:#e2c51f;
+  --2a: #B9E5E8;                    --2g: #fff170;
+  --3a: #7AB2D3;                    --3g: #e6d542;
+  --4a: #4A628A;                    --4g: #857a1b;
+  --5a: #1d2742; --5b: #131929;   --5g: #141308;
+  --6a: #0c0c1a;                    --6g: #383411;
+}
+
 * {
   transition: 0.7s ease;
 }
@@ -8,19 +17,19 @@ body {
       radial-gradient(
       farthest-corner at 40px 40px,
       rgba(0, 0, 0, 1) 0%,
-      rgb(9, 13, 24) 100%);
+      var(--6a) 100%);
       background-position: center;
       background-repeat: round;
       background-size: cover;
       background-attachment: fixed;
   color: white;
-  margin: 7rem;
+  margin: 7vw;
 }
 
 h1 {
   text-align: center;
   font-size: 3rem;
-  color: #aaafcc;
+  color: var(--1a);
 }
 
 ::-webkit-scrollbar {
@@ -33,6 +42,8 @@ h1 {
 
 */
 
+/*OVERLAY AKA NAV*/
+
 .overlay {
   height: 100%;
   width: 0;
@@ -40,7 +51,7 @@ h1 {
   z-index: 3;
   top: 0;
   left: 0;
-  background-image: linear-gradient(45deg, rgb(1, 0, 3), rgb(7, 17, 41));
+  background-image: linear-gradient(45deg, rgb(1, 0, 3), var(--5a));
   overflow-x: hidden;
   transition: 1s cubic-bezier(0.65, 0, 0.35, 1);
 }
@@ -83,6 +94,7 @@ h1 {
   }
 }
 
+/*OVERLAY AKA NAV*/
 
 /**/
 /*PANEL EVENT*/
@@ -90,22 +102,26 @@ h1 {
 
 
 .Panel{
-    writing-mode:vertical-lr;
+    /*text-wrap: wrap;
+    word-break: break-all;*/
+    writing-mode: vertical-lr;
     text-orientation: sideways-right;
     text-align: center;
     font-size: 30px;
-    margin-left: -6rem;
+    margin-left: -6vw;
     letter-spacing: 0.5rem;
     font-weight: 600;
     position: fixed;
     top: 30%;
     width: 2rem;
-    background-image: linear-gradient(45deg, rgba(11,21,26,0.3), rgba(7,25,36,0.7));
-    padding: 1rem;
+    color: var(--2g);
+    background-image: linear-gradient(45deg, var(--5g), var(--6g));
+    padding: 0.65rem;
     border-radius: 1rem;
     border-style: solid;
-    border-color: rgba(7,25,36,0.7);
+    border-color: var(--4g);
     padding-top: 3rem;
+    padding-left: 0.55rem;
     padding-bottom: 3rem;
 }
 
@@ -116,19 +132,21 @@ h1 {
     text-orientation: sideways-right;
     text-align: center;
     font-size: 30px;
-    margin-left: -6rem;
+    margin-left: -6vw;
     letter-spacing: 0.5rem;
     font-weight: 600;
     position: fixed;
     top: 65%;
     width: 2rem;
-    background-image: linear-gradient(45deg, rgba(11,21,26,0.3), rgba(7,25,36,0.7));
-    padding: 1rem;
+    background-image: linear-gradient(45deg, var(--5g), var(--6g));
+    padding: 0.65rem;
     border-radius: 1rem;
     border-style: solid;
-    border-color: rgba(7,25,36,0.7);
+    color: var(--2g);
+    border-color: var(--4g);
     padding-top: 3rem;
     padding-bottom: 3rem;
+    padding-left: 0.55rem;
     text-wrap: nowrap;
 }
 
@@ -211,13 +229,13 @@ h1 {
 }
 
 .Close:hover{
-  border-color: white;
-  color: white;
+  border-color: var(--1g);
+  color: var(--1g);
 }
 
 .Panel:hover{
-  border-color: white;
-  color: white;
+  border-color: var(--1g);
+  color: var(--1g);
 }
 
 
@@ -228,7 +246,7 @@ h1 {
 
 
 .Info {
-  display: none;;;;;;
+  display: block;;;;;;
 }
 
 .prequel {
@@ -236,7 +254,7 @@ h1 {
 }
 
 .week1 {
-  display: block;;
+  display: none;;
 }
 
 .week2 {
@@ -251,16 +269,17 @@ h1 {
   display: none;;
 }
 
-/**/
-
-.day1 {
+.dev {
   display: none;;
 }
 
+/**/
 
 
 
 
+
+/*infocard*/
 
 
 .subcard {
@@ -269,7 +288,7 @@ h1 {
   justify-content: center;
   text-align: center;
   z-index: 1;
-  background: rgb(17, 20, 34);
+  background: var(--6a);
   width: 75vw;
   margin-left: auto;
   margin-right: auto;
@@ -290,12 +309,23 @@ h1 {
   border-style:solid;
   display: block;
   border-radius: 1rem;
-  border-color: rgba(21, 58, 100, 0.7);
-  background-image:linear-gradient(45deg, rgba(11,21,26,0.2), rgba(7,25,36,1));
+  border-color: var(--5a);
+  background-image:linear-gradient(45deg, rgba(5,5,22,1), var(--5b));
   padding: 2rem;
 
 
 }
+
+.infocard p {
+  font-size: 1.3rem;
+  line-height: 1.8rem;
+}
+
+.infocard h2 {
+  font-size: 2.2rem;
+}
+
+
 
 .shown {
   display: block;
@@ -337,7 +367,9 @@ h1 {
   }
 }
 
+/*INFOCARD*/
 
+/*QUOTE*/
 
 blockquote {
   color: rgba(189, 212, 255, 0.8);
@@ -398,6 +430,9 @@ blockquote a:hover {
   text-decoration: underline;
 }
 
+/*QUOTE*/
+
+/*STYLES*/
 
 .style-small {
   font-size: 15px;
@@ -409,21 +444,51 @@ blockquote a:hover {
 .style-gradient {
   background-image: linear-gradient(-45deg, rgb(105, 110, 168), rgb(200, 200, 220));
   color: transparent;
-  font-weight: 700;
+  font-weight: 500;
+  text-align: justify;
   font-size: 1.5rem;
   background-clip: text;
 }
 
-
-p {
-  text-align: justify;
+.style-mark {
+  color: var(--3g);
+  font-weight: 600;
 }
+
+.style-fail {
+  color: var(--4a);
+}
+
+.style-pre {
+  font-family: "league spartan";
+  font-size: 1.8rem;
+  line-height: 2.2rem;
+  text-align: justify;
+  text-shadow: 0 0 1rem rgba(255, 255, 255, 1), 0 0 2rem rgba(255, 255, 255, 1);
+}
+
+.style-giveup {
+  color: red;
+  font-weight: 600;
+  width: 50rem;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*STYLES*/
+
+
+
+/*BUTTONS*/
+
 
 .maincard {
   border-style: solid;
   padding: 2rem;
   border-radius: 3rem;
-  border-color: rgba(21, 58, 100, 0.7);
+  border-color: var(--5a);
+  background-image:linear-gradient(45deg, rgba(0,0,10,1), var(--6a));
   text-align: center;
   width: fit-content;
   margin-left: auto;
@@ -435,8 +500,8 @@ p {
   display: inline-grid;
   padding: 2rem 3rem 1.6rem 3rem;
   border-radius: 1rem;
-  border-color: rgba(21, 58, 100, 0.7);
-  background-image:linear-gradient(45deg, rgba(11,21,26,0.2), rgba(7,25,36,1));
+  border-color: var(--5a);
+  background-image:linear-gradient(45deg, rgba(11,21,26,0.2), var(--5b));
   font-size: 2rem;
   font-family: "league spartan";
   margin: 0.5rem 1rem 0.5rem 1rem;
@@ -447,3 +512,5 @@ p {
   transform: scale(1.1);
 }
 
+
+/*BUTTONS*/
